--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         npm install
 
     - name: Run Tests
-      run: node test.js
+      run: node tests.js
 
     - name: Setup Pages
       uses: actions/configure-pages@v2
