--- a/package.json
+++ b/package.json
@@ -1,21 +1,11 @@
 {
-    "name": "romans-converter-tests",
-    "version": "1.0.0",
-    "description": "QUnit tests for a Romans Converter running in Puppeteer",
-    "main": "test.js",
-    "scripts": {
-      "test": "node test.js"
-    },
-    "keywords": [
-      "QUnit",
-      "Puppeteer",
-      "Testing"
-    ],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "puppeteer": "^10.0.0"
-    },
-    "devDependencies": {}
+  "name": "test-project",
+  "version": "1.0.0",
+  "scripts": {
+    "test": "node run_tests.js"
+  },
+  "devDependencies": {
+    "puppeteer": "^10.0.0",
+    "qunit": "^2.14.1"
   }
-  
+}
