--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,22 +24,19 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: lint
     steps:
       - uses: actions/checkout@v3
       # Runs a single command using the runners shell
       - name: Set-up Node
         uses: actions/setup-node@v1
         with: 
-         node-version: '16'
+         node-version: 10.x
       - name: Install Dependencies
         run: | 
           npm install --save-dev node-qunit-phantomjs
           npm install --save-dev qunit
       - name: Test
         run: node_modules/node-qunit-phantomjs/bin/node-qunit-phantomjs test.html 
-        
-  
 
   deploy:
     environment:
